--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -1,5 +1,14 @@
 @import 'core/variables';
 
+html{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 //RESETS
 body {
   margin: 0;
@@ -22,6 +31,26 @@ p {
   margin: 0;
 }
 
+ul{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: $white;
+  transition: all 0.3s ease;
+  &:hover{
+    color: $red;
+  }
+}
+
+.container{
+  max-width: 100%;
+  margin: 30px;
+}
+
 
 //--------------------------------------------------//
 
@@ -31,6 +60,15 @@ header {
   justify-content: space-between;
   flex-flow: row wrap;
   padding: 30px;
+  @media screen and (max-width: $mobile-max){
+    justify-content: center;
+  }
+}
+
+.search-wrapper{
+  @media screen and (max-width: $tablet-max){
+    order: 2;
+  }
 }
 
 #searchbox {
@@ -43,57 +81,93 @@ header {
   transition: border .25s ease, width .125s ease .125s;
   &:focus{
     border: 2px solid #e50914;
-    width: 330px;
+    width: 300px;
+    @media screen and (max-width: $mobile-max){
+      width: 90%;
+    }
   }
 }
 
-// Logo
-#logo {
-	width: 151px;
-	height: 41px;
-	margin-right: 30px;
-	transition: margin .125s ease;
-
-	svg {
-		transform: scale(.5);
-		transform-origin: 0 0;
-
-		path {
-			fill: $red;
-			transition: fill .125s ease;
-		}
-	}
-
-	&:hover {
-		cursor: pointer;
-		margin-top: 2px;
-		svg {
-			path {
-				fill: $white !important;
-			}
-		}
-	}
-}
-
-// UserProfile
-.user-profile{
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  color: $white;
-  font-size: 20px;
-  font-weight: 300;
-  cursor: pointer;
-  &:hover > img {
-    box-shadow: inset 0 0 0 10px #f94f4f;
+header{
+  .menu-main{
+    @media screen and (max-width: $tablet-max){
+      order: 3;
+    }
+    ul{
+      margin-left: -235px;
+      display: flex;
+      flex-flow: row wrap;
+      a{
+        padding: 20px;
+        font-size: 20px;
+        font-weight: 300;
+      }
+    }
   }
-  img{
-    width: 40px;
-    height: auto;
-    border-radius: 100%;
-    margin-left: 20px;
-    padding: 3px;
+  // Logo
+  #logo {
+  	width: 151px;
+  	height: 41px;
+  	margin-right: 30px;
+  	transition: margin .125s ease;
+    @media screen and (max-width: $mobile-max){
+      width: 90px;
+      margin-right: 30px;
+    }
+  	svg {
+  		transform: scale(.5);
+  		transform-origin: 0 0;
+      @media screen and (max-width: $mobile-max){
+        transform: scale(.3);
+      }
+  		path {
+  			fill: $red;
+  			transition: fill .125s ease;
+  		}
+  	}
+
+  	&:hover {
+  		cursor: pointer;
+  		margin-top: 2px;
+  		svg {
+  			path {
+  				fill: $white !important;
+  			}
+  		}
+  	}
   }
+
+  // UserProfile
+  .user-profile{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    color: $white;
+    font-size: 20px;
+    font-weight: 300;
+    cursor: pointer;
+    @media screen and (max-width: $tablet-max){
+      order: 1;
+      margin-top: -15px;
+      font-size: 16px;
+      width: 50%;
+      justify-content: flex-end;
+    }
+    &:hover > img {
+      box-shadow: inset 0 0 0 10px #f94f4f;
+    }
+    img{
+      width: 40px;
+      height: auto;
+      border-radius: 100%;
+      margin-left: 20px;
+      padding: 3px;
+      @media screen and (max-width: $mobile-max){
+        width: 30px;
+      }
+    }
+  }
+
 }
 
 // TitleList
@@ -169,6 +243,16 @@ header {
         opacity: 1;
         cursor: pointer;
       }
+    }
+  }
+}
+
+.menu-genres{
+  ul{
+    display: flex;
+    flex-flow: row wrap;
+    a{
+      padding: 10px 30px 10px 0px;
     }
   }
 }
