--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -16,6 +16,10 @@ body {
   background-color: black;
   color: $white;
   overflow-x: hidden;
+  @media screen and (max-width: $mobile-max){
+    font-size: 14px;
+    font-weight: 400;
+  }
 }
 
 input {
@@ -46,24 +50,41 @@ a{
   }
 }
 
+h2{
+  font-size: 22px;
+  @media screen and (max-width: $mobile-max){
+    font-size: 18px;
+  }
+}
+
+
 .container{
   max-width: 100%;
   margin: 30px;
 }
 
 
-//--------------------------------------------------//
-
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-flow: row wrap;
-  padding: 30px;
-  @media screen and (max-width: $mobile-max){
-    justify-content: center;
-  }
+// SCROLLBAR STYLES
+::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
 }
+
+::-webkit-scrollbar{
+	width: 6px;
+  height: 6px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #D62929;
+}
+
+
+//--------------------------------------------------//
 
 .search-wrapper{
   @media screen and (max-width: $tablet-max){
@@ -88,11 +109,30 @@ header {
   }
 }
 
+.page{
+  margin-top: 75px;
+  @media screen and (max-width: $tablet-max){
+    margin-top: 0;
+  }
+}
+
 header{
+  position: fixed;
+  height: 75px;
+  background-color: $black;
+  top: 0;
+  z-index: 200;
+  width: calc(100% - 60px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  padding: 0 30px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  @media screen and (max-width: $tablet-max){
+    display: none;
+  }
   .menu-main{
-    @media screen and (max-width: $tablet-max){
-      order: 3;
-    }
     ul{
       margin-left: -235px;
       display: flex;
@@ -106,20 +146,11 @@ header{
   }
   // Logo
   #logo {
-  	width: 151px;
   	height: 41px;
-  	margin-right: 30px;
   	transition: margin .125s ease;
-    @media screen and (max-width: $mobile-max){
-      width: 90px;
-      margin-right: 30px;
-    }
   	svg {
   		transform: scale(.5);
   		transform-origin: 0 0;
-      @media screen and (max-width: $mobile-max){
-        transform: scale(.3);
-      }
   		path {
   			fill: $red;
   			transition: fill .125s ease;
@@ -182,10 +213,16 @@ header{
   justify-content: space-between;
   overflow: hidden;
   transition: all 0.6s ease;
+  @media screen and (max-width: $tablet-max){
+    overflow-x: scroll;
+  }
   .nav-slide{
     position: absolute;
     z-index: 100;
     color: $white;
+    @media screen and (max-width: $tablet-max){
+      display: none;
+    }
     i{
       font-size: 70px;
       margin-top: 100px;
@@ -247,10 +284,98 @@ header{
   }
 }
 
+.hero-container{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  transition: all 0.6s ease;
+  @media screen and (max-width: $tablet-max){
+    overflow-x: scroll;
+  }
+  .nav-slide{
+    position: absolute;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    z-index: 100;
+    color: $white;
+    @media screen and (max-width: $tablet-max){
+      display: none;
+    }
+    i{
+      font-size: 70px;
+      &:hover{
+        color: $red;
+        cursor: pointer;
+      }
+    }
+    &.nav-prev{
+      background: linear-gradient(to right,rgba(0,0,0,.95) 0,transparent 100%);
+      height: 70%;
+      left: 0;
+      padding-left: 20px;
+    }
+    &.nav-next{
+      background: linear-gradient(to left,rgba(0,0,0,.95) 0,transparent 100%);
+      height: 70%;
+      right: 0;
+    }
+  }
+  .hero-item{
+    position: relative;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    img{
+      width: 100vw;
+    }
+    .hero-info{
+      height: calc(100% - 40px);
+      margin: 40px 80px 80px 80px;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: column wrap;
+      .hero-name{
+        font-weight: 700;
+        font-size: 50px;
+        color: $red;
+        margin: 0;
+        text-shadow: 3px 3px 0px #2c2e38, 3px 3px 0px #5c5f72;
+      }
+      .desc{
+        margin-left: -80px;
+        padding: 30px 80px;
+        width: 100%;
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        line-height: 1.6;
+        background-color: rgba(0, 0, 0, 0.6);
+      }
+    }
+    .overlay{
+      position: absolute;
+      background-color: rgba(0, 0, 0, 0.2);
+      height: 100%;
+      width: 100%;
+      transition: opacity .125s ease;
+    }
+  }
+}
+
 .menu-genres{
   ul{
     display: flex;
     flex-flow: row wrap;
+    flex-flow: row nowrap;
+    align-items: center;
+    overflow-x: scroll;
     a{
       padding: 10px 30px 10px 0px;
     }
