--- a/client/src/scss/styles.scss
+++ b/client/src/scss/styles.scss
@@ -513,32 +513,79 @@ header{
       &:first-of-type{
         padding-top: 0;
       }
+      .heading-info{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        h1, p, span{
+          margin: 0;
+          padding: 20px 0;
+        }
+        p{
+          font-size: 20px;
+          font-weight: 700;
+        }
+        .heading-votes span{
+          font-size: 10px;
+          font-weight: 500;
+        }
+      }
     }
     max-width: 650px;
     h1{
       color: $red;
       font-weight: 900;
-      margin-bottom: 10px;
+      span{
+        color: $black;
+        font-size: 18px;
+        font-weight: 400;
+        margin-bottom: 20px;
+      }
     }
     h2{
       margin: 25px 0;
-    }
-    span{
-      font-size: 18px;
-      font-weight: 700;
-      margin-bottom: 20px;
     }
     p{
       margin-top: 35px;
       line-height: 25px;
     }
     .movie-genres{
-      margin-top: 25px;
       a{
         font-size: 10px;
         padding: 7px 15px;
         border-radius: 5px;
         margin-right: 10px;
+      }
+    }
+    .movie-releaseinfo{
+      display: flex;
+      p{
+        margin-top: 20px;
+        font-size: 12px;
+        letter-spacing: 1px;
+        font-weight: 700;
+        padding: 0px 10px;
+        border-right: 1px solid $red;
+        &:first-of-type{
+          padding-left: 0;
+        }
+        &:last-of-type{
+          border-right: none;
+        }
+      }
+      a{
+        padding: 0px 10px;
+        font-size: 12px;
+        color: #221f1f;
+        letter-spacing: 1px;
+        font-weight: 700;
+        margin: 0;
+        margin-top: 20px;
+        line-height: 25px;
+        border-left: 1px solid $red;
+        &:hover{
+          color: $red;
+        }
       }
     }
     .cast{
